# Asparserations

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp  specification
bootstrap/: config.json  parser_gen.py
bootstrap/include/: callback.hpp  grammar_syntax.hpp  lexer.hpp
bootstrap/src/: callback.cpp  gen_json.cpp  grammar_syntax.cpp  lexer.cpp
codegen/include/: code_generator.hpp  generator.hpp  json_generator.hpp  scheme_code_generator.hpp  template.hpp
codegen/src/: json_generator.cpp  json_node.cpp  scheme_code_generator.cpp
docs/: README.md
docs/example1/: README.md  a.out.json  grammar  lalr-debug.json  lalr.json  lr-debug.json  lr.json
grammar/include/: grammar.hpp  nonterminal.hpp  production.hpp  symbol.hpp  token.hpp
grammar/src/: grammar.cpp  nonterminal.cpp  production.cpp  token.cpp
table/include/: generator.hpp  item.hpp  item_core.hpp  item_set.hpp  lalr_item.hpp  lalr_item_set.hpp  lalr_state.hpp  lalr_table.hpp  lookahead_record.hpp  lr_generator.hpp  lr_table.hpp  state.hpp  table.hpp
table/src/: generator.cpp  item.cpp  item_core.cpp  item_set.cpp  lalr_item_set.cpp  lalr_state.cpp  lalr_table.cpp  lr_generator.cpp  lr_table.cpp  state.cpp  table.cpp
tests/include/: print_states.hpp
tests/src/: dragon_book_grammar1.cpp  first_set1.cpp  json_test1.cpp  lalr_table1.cpp  lr_table1.cpp  print_states.cpp
